--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "build:stage": "ng build --configuration staging",
+    "build:prod":  "ng build --configuration production",
     "test": "ng test",
     "dev:ssr": "ng run ScalableUI:serve-ssr",
     "serve:ssr": "node dist/ScalableUI/server/main.js",
