--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "build:stage": "ng build --configuration staging",
-    "build:prod":  "ng build --configuration production",
+    "build:prod": "ng build --configuration production",
     "test": "ng test",
     "dev:ssr": "ng run ScalableUI:serve-ssr",
     "serve:ssr": "node dist/ScalableUI/server/main.js",
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
     "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.15.2",
     "rxjs": "~7.8.0",
