Update and rename scalable.yml to scalable-ui.yml

--- a/.github/workflows/scalable-ui.yml
+++ b/.github/workflows/scalable-ui.yml
@@ -1,10 +1,10 @@
-name: NodeJS with Webpack
+name: Deploy to Vercel
 
 on:
   push:
-    branches: [ "production" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "production" ]
+    branches: [ "master" ]
 
 jobs:
   build:
