--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store": "^16.2.0",
     "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.15.2",
+    "ngx-isr": "^0.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
