--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "scalable-ui",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx exec -- ng",
     "start": "nx serve --watch",
     "build": "nx build",
-    "watch": "nx build --watch --configuration development",
+    "watch": "nx build --watch",
     "build:stage": "nx build --configuration staging",
     "build:prod": "nx build --configuration production",
     "test": "nx test",
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/component": "^16.3.0",
+    "@ngrx/data": "^16.3.0",
     "@ngrx/store": "^16.2.0",
     "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.15.2",
@@ -42,7 +44,6 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@nguniversal/builders": "^16.2.0",
-    "@nx/angular": "16.10.0",
     "@nx/workspace": "16.10.0",
     "@schematics/angular": "~16.2.0",
     "@types/express": "^4.17.0",
@@ -57,5 +58,8 @@
     "nx": "16.10.0",
     "nx-cloud": "latest",
     "typescript": "~4.9.4"
+  },
+  "nx": {
+    "targets": {}
   }
 }
