--- a/project.json
+++ b/project.json
@@ -32,7 +32,7 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
+              "maximumWarning": "10mb",
               "maximumError": "10mb"
             },
             {
