--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@nguniversal/builders": "^16.2.0",
+    "@nx/angular": "^17.0.1",
     "@nx/workspace": "16.10.0",
     "@schematics/angular": "~16.2.0",
     "@types/express": "^4.17.0",
