more update on docker && git ops

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "ng": "nx exec -- ng",
     "start": "nx serve --watch",
     "build": "nx build",
-    "watch": "nx build --watch",
-    "build:stage": "nx build --configuration staging",
-    "build:prod": "nx build --configuration production",
+    "build:development": "nx build --configuration=development --watch",
+    "build:staging": "nx build --configuration=staging",
+    "build:production": "nx build --configuration=production",
     "test": "nx test",
     "dev:ssr": "nx run ScalableUI:serve-ssr",
     "serve:ssr": "node dist/ScalableUI/server/main.js",
