--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,9 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
-    volumes:
-      - .:/code
-      - logvolume01:/var/log
-    depends_on:
-      - redis
-  redis:
-    image: redis
-volumes:
-  logvolume01: {}
+      - "5000:8000"
+    restart: always
+
+  databases:
+  caches:
+  queues:  
