--- a/.github/workflows/scalable-ui.yml
+++ b/.github/workflows/scalable-ui.yml
@@ -9,7 +9,8 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-        environment: QA
+        environment: Development
+        url: https://github.com/clintSanch/ScalableUI/settings/environments/1587075091/edit
         
         strategy:
             matrix:
