--- a/.github/workflows/scalable-ui.yml
+++ b/.github/workflows/scalable-ui.yml
@@ -2,9 +2,9 @@ name: CI/CD Nodejs scalable-ui to Vercel
 
 on:
     push:
-        branches: ["master"]
+        branches: ["development"]
     pull_request:
-        branches: ["master"]
+        branches: ["development"]
         
 jobs:
     build:
