--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 on:
     push:
-      branches: [ "master" ]
+      branches: [ "development" ]
       path: ["Dockerfile", ".github/workflows/docker-image.yml"]
     pull_request:
-      branches: [ "master" ]
+      branches: [ "development" ]
 
 
 jobs:
